# vawt-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  bench.cpp  configure.sh  main.cpp  run.sh  test.sh  tests.cpp
vawt/: CMakeLists.txt  aerofoil.cpp  aerofoil.hpp  private_stuff.hpp  streamtube.cpp  streamtube.hpp  vawt.cpp  vawt.hpp
